<resources>
    <string name="app_name">My Finance</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>

    <string name="loading">Loading...</string>
    <string name="operations">Operations</string>
    <string name="reports">Reports</string>
    <string name="handbook">Handbook</string>
    <string name="accounts">Accounts</string>
    <string name="sources">Sources</string>
    <string name="help">About</string>

</resources>
