<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_main">
        <item
            android:id="@+id/nav_operations"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/operations" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/accounts" />
        <item
            android:id="@+id/nav_sources"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/sources" />
    </group>

    <group android:id="@+id/menu_additional">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/help"/>
    </group>

</menu>
